# ai_shell

./: .coveragerc  .gitignore  .llmsignore  .pre-commit-config.yaml  .pydoctest.json  .pylintrc  .pylintrc_spell  .pylintrc_tests  .readthedocs.yaml  CHANGELOG.md  Makefile  README.md  ai_shell.toml  config.toml  example_docs_writer_bot.py  example_pylint_bot.py  example_test_writer_bot.py  example_tiny_bot.py  example_tool_tester_bot.py  gen_pdoc3.sh  make_zip.py  mdbuild.sh  minimal_example.py  minimal_example_old.py  minimal_shell_example.sh  mkdocs.yml  mod.patch  private_dictionary.txt  pyproject.toml  tox.ini
.github/workflows/: build.yml  build_push_image.yml  create_draft_release.yml  pages.yml  release.yml
ai_shell/: __about__.py  __init__.py  __main__.py  answer_tool.py  backup_restore.py  cat_tool.py  cut_tool.py  diff_tool.py  ed_tool.py  edlin_tool.py  find_tool.py  git_tool.py  grep_tool.py  head_tail_tool.py  import_plugins.py  insert_tool.py  ls_tool.py  minify_it.py  openai_schemas.py  openai_support.py  openai_toolkit.py  openai_tools.py  patch_tool.py  pycat_tool.py  pytest_tool.py  read_py_source.py  regex_tester_tool.py  replace_tool.py  rewrite_tool.py  schemas.py  sed_tool.py  todo_tool.py  token_tool.py  toolkit.py  toolkit_base.py  tools_registry.py
ai_shell/ai_logs/: json_log_handler.py  log_to_bash.py  log_to_markdown.py  logging_utils.py  pretty_errors_log.py
ai_shell/bot_glue/: bot.py  tool_utils.py
ai_shell/code_generate/: __init__.py  generate_cli.py  generate_schema.py  generate_toolkit.py  method_to_jsonschema.py
ai_shell/demo_bots/: demo_setup.py  docs_writer_bot.py  pylint_bot.py  test_writer_bot.py  todo_bot.py  todo_bot_instructions.md  todo_bot_mission.md  tool_tester_bot.py  tool_tester_bot_instructions.md
ai_shell/plugins/: hello_tool.py
ai_shell/pyutils/: __init__.py  minify_it.py  validate.py
ai_shell/subbots/: __init__.py  tool_picker.py
ai_shell/todo/: README.md  __init__.py  models.py  public_api.py  source_refs.py  views.py
ai_shell/todo/templates/: task_report_template.md.j2
ai_shell/utils/: __init__.py  cli_availability.py  config_manager.py  console_utils.py  crlf_handlers.py  cwd_utils.py  json_log_handler.py  json_utils.py  log_conversation.py  logging_utils.py  medias.py  read_fs.py  type_repair.py
ai_todo/: README.md  __init__.py  models.py  public_api.py  source_refs.py  views.py
ai_todo/templates/: search_results_template.md.j2
archive/: TODO.md  ed_tool.py  edlin_tool.py  example_tiny_bot.py  log_to_markdown.py  read_py_source.py  test_ed.py  test_read_py_source.py
archive/bot_glue/: __init__.py  bot.py  tool_utils.py
archive/demo_bots/: check_tools.py  docs_writer_bot.py  pylint_bot.py  test_writer_bot.py  test_writer_bot_instructions.md  test_writer_bot_mission.md  todo_bot.py  tool_tester_bot.py  tool_tester_bot_mission.md
bug_trail/: README.md  __init__.py  __main__.py  data_code.py  example.py  fs_utils.py  handlers.py  log_detail.html  log_overview.html  views.py
docs/: API.md  Design.md  DocumentEditing.md  Features.md  Manual.md  README.md  TODO.md  UseCases.md  Usecases.md  build_script_bot.md  index.html
docs/ai_shell/: answer_tool.html  backup_restore.html  cat_tool.html  cut_tool.html  diff_tool.html  ed_tool.html  edlin_tool.html  find_tool.html  git_tool.html  grep_tool.html  head_tail_tool.html  import_plugins.html  index.html  insert_tool.html  ls_tool.html  minify_it.html  openai_schemas.html  openai_support.html  openai_toolkit.html  openai_tools.html  patch_tool.html  pycat_tool.html  pytest_tool.html  read_py_source.html  regex_tester_tool.html  replace_tool.html  rewrite_tool.html  sed_tool.html  todo_tool.html  token_tool.html
docs/ai_shell/ai_logs/: index.html  json_log_handler.html  log_to_bash.html  log_to_markdown.html  logging_utils.html  pretty_errors_log.html
docs/ai_shell/bot_glue/: bot.html  index.html  tool_utils.html
docs/ai_shell/code_generate/: generate_cli.html  generate_schema.html  generate_toolkit.html  index.html  method_to_jsonschema.html
docs/ai_shell/demo_bots/: check_tools.html  demo_setup.html  docs_writer_bot.html  index.html  pylint_bot.html  test_writer_bot.html  todo_bot.html  tool_tester_bot.html
docs/ai_shell/plugins/: hello_tool.html  index.html
docs/ai_shell/pyutils/: index.html  minify_it.html  validate.html
docs/ai_todo/: views.html
docs_api/: ai_shell.html  index.html  search.js
docs_api/ai_shell/: answer_tool.html  cat_tool.html  cut_tool.html  diff_tool.html  ed_tool.html  edlin_tool.html  find_tool.html  git_tool.html  grep_tool.html  head_tail_tool.html  index.html  insert_tool.html  ls_tool.html  minify_it.html  openai_schemas.html  openai_support.html  openai_toolkit.html  openai_tools.html  patch_tool.html  pycat_tool.html  pytest_tool.html  read_py_source.html  replace_tool.html  rewrite_tool.html  sed_tool.html  todo_tool.html  token_tool.html
docs_api/ai_todo/: index.html  models.html  public_api.html  source_refs.html
spec/: last_call_for_features.md
src/: README.md  large_input.txt  ruff.toml  test_main_module.py  todo_incomplete.toml
src/fish_tank/: README.md  __init__.py  __main__.py  __main__.py.2.bak
src/tests/: __init__.py  test___main__.py  test_basic.py  test_init.py  test_main.py  test_main_module.py  test_readme.py
src_static/: test_main_module.py  todo_incomplete.toml
src_static/fish_tank/: __main__.py
src_static/tests/: test_main_module.py
tests/: ai_shell.toml  todo_incomplete.toml  util.py
tests/test_cli/: test_imports.py
tests/test_generate/: test_generators.py  test_jsonschema.py
tests/test_todo/: test_models.py  test_public_api.py  test_views.py
tests/test_tools/: test_cat_tool.py  test_code_as_markdown.py  test_cut_tool.py  test_ed.py  test_find_tool.py  test_git_tool.py  test_grep_tool.py  test_head_tail.py  test_insert_tool.py  test_json_utils.py  test_ls_tool.py  test_minify_it.py  test_patch_tool.py  test_replace.py  test_rewrite_tool.py  test_sed_tool.py  test_toolkit.py  test_tree.py
tests/test_utils/: test_read_fs.py  test_scratch.py  test_type_repair.py
(+31 files in other folders)
