[project]
name = "ai_shell"
version = "2.0.0"
description = "Safe, token-aware filesystem tools for LLM agents."
authors = [{ name = "Matthew Martin", email = "matthewdeanmartin@gmail.com" }]
keywords = ["llm", "agent", "tools", "filesystem", "shell"]
license = "MIT"
readme = "README.md"
requires-python = ">=3.12,<4.0"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    # token counting + truncated-json repair
    "untruncate-json>=1.0.0",
    "tiktoken>=0.4.0",
    # tool helpers
    "stdlib-list>=0.10.0",
    "inflect>=7.0.0",
    # unified-diff apply (primary edit path)
    "unidiff>=0.7.5",
    # pycat support
    "astor>=0.8.1",
    # check if an edit removed code
    "pygount>=1.6.1",
    # schema generation
    "docstring-parser>=0.15",
    "jsonschema>=4.20.0",
    # config + media types
    "toml>=0.10.2",
    "jinja2>=3.1.2",
    "pyyaml>=6.0.1",
    "orjson>=3.9.10",
]

[project.optional-dependencies]
# Optional goal-checker integrations. Most users already have these binaries;
# install only if you want to call them through ai_shell's wrappers.
checkers = [
    "pytest>=7.4.3",
    "pytest-cov>=4.1.0",
    "pylint>=3.0.2",
    "ruff>=0.1.9",
    "black>=23.11.0",
]

[project.urls]
Homepage = "https://github.com/matthewdeanmartin/ai_shell"
Repository = "https://github.com/matthewdeanmartin/ai_shell"
"Bug Tracker" = "https://github.com/matthewdeanmartin/ai_shell/issues"
"Change Log" = "https://github.com/matthewdeanmartin/ai_shell/blob/main/CHANGELOG.md"

[project.scripts]
ai_shell = "ai_shell.__main__:run"
ais = "ai_shell.__main__:run"

[tool.hatch.build.targets.wheel]
packages = ["ai_shell"]

[tool.black]
line-length = 120
target-version = ['py39']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = [
    "test",
    "tests"
]
junit_family = "xunit1"
norecursedirs = ["vendor", "scripts"]
# don't know how to do this in toml
#addopts = "--strict-markers"
#markers =
#	slow: marks tests as slow (deselect with '-m "not slow"')
#	fast: marks tests as fast (deselect with '-m "not fast"')

[tool.isort]
default_section = "THIRDPARTY"
force_grid_wrap = 0
include_trailing_comma = true
known_first_party = ["dedlin"]
line_length = 120
multi_line_output = 3
use_parentheses = true

[tool.ruff]
line-length = 320

# Enable Pyflakes `E` and `F` codes by default.
select = ["E", "F",
    "D", # docs
    "UP", # pyupgrade
    "B", # bugbear
]
ignore = [
    "E722",
    # only track structural problems with docstrings, not whitespace, nor missing
    "D200", "D212", "D415","D411", "D205","D102", "D103", "D100","D107","D101","D104","D105",
    "UP007", "UP038", # Not sure if | is well supported in lowever versions of python
]

# Exclude a variety of commonly ignored directories.
exclude = [
    "dead_code",
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]
per-file-ignores = { }

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# Assume Python 3.10.
target-version = "py311"


[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.scriv]
version = "literal: pyproject.toml: tool.poetry.version"
format = "md"
main_branches = "master, main, develop, dev"

[mypy]
warn_return_any = true
warn_unused_configs = true
strict = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
strict_optional = true
warn_redundant_casts = true
warn_no_return = true

[mypy.pygount]
ignore_missing_imports = true

[mypy.astor]
ignore_missing_imports = true

[dependency-groups]
dev = [
    "mypy>=1.8",
    "pylint>=3.0",
    "ruff>=0.1.9",
    "black>=23.11.0",
    "pytest>=7.4.3",
    "pytest-cov>=4.1.0",
    "pytest-snapshot>=0.9.0",
    "anyio>=4.2.0",
    "python-dotenv>=1.0.0",
    "types-jsonschema",
    "types-PyYAML",
    "types-toml",
]

[tool.uv]

[tool.uv.pip]
universal = true
