[project]
name = "ai-shell"
version = "2.0.0"
description = "Safer, sandboxed token-aware filesystem tools for LLM agents."
authors = [{ name = "Matthew Martin", email = "matthewdeanmartin@gmail.com" }]
keywords = ["llm", "agent", "tools", "filesystem", "shell"]
license = "MIT"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    # token counting + truncated-json repair
    "untruncate-json>=1.0.0",
    "tiktoken>=0.4.0",
    # tool helpers
    "stdlib-list>=0.10.0",
    "inflect>=7.0.0",
    # unified-diff apply (primary edit path)
    "unidiff>=0.7.5",
    # pycat support
    "astor>=0.8.1",
    # schema generation
    "docstring-parser>=0.15",
    "jsonschema>=4.20.0",
    # config + media types
    "toml>=0.10.2",
    "jinja2>=3.1.2",
    "pyyaml>=6.0.1",
    "orjson>=3.9.10",
]

[project.optional-dependencies]
# Optional goal-checker integrations. Most users already have these binaries;
# install only if you want to call them through ai_shell's wrappers.
checkers = [
    "pytest>=7.4.3",
    "pytest-cov>=4.1.0",
    "pylint>=3.0.2",
    "ruff>=0.1.9",
    "black>=23.11.0",
    "pygount>=3.0.0",
]
docs = [
    "mkdocs>=1.6.0",
]

[project.urls]
Homepage = "https://github.com/matthewdeanmartin/ai_shell"
Repository = "https://github.com/matthewdeanmartin/ai_shell"
Documentation = "https://ai-shell.readthedocs.io/"
"API Reference" = "https://matthewdeanmartin.github.io/ai_shell/"
"Bug Tracker" = "https://github.com/matthewdeanmartin/ai_shell/issues"
"Change Log" = "https://github.com/matthewdeanmartin/ai_shell/blob/main/CHANGELOG.md"

[project.scripts]
ai_shell = "ai_shell.__main__:run"
ais = "ai_shell.__main__:run"

[tool.hatch.build.targets.wheel]
packages = ["ai_shell"]

[tool.black]
line-length = 120
target-version = ['py39']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = [
    "test",
    "tests"
]
junit_family = "xunit1"
norecursedirs = ["vendor", "scripts"]
# don't know how to do this in toml
#addopts = "--strict-markers"
#markers =
#	slow: marks tests as slow (deselect with '-m "not slow"')
#	fast: marks tests as fast (deselect with '-m "not fast"')

[tool.isort]
profile = "black"
known_first_party = ["ai_shell"]
line_length = 120
skip_gitignore = true

[tool.ruff]
line-length = 320

# Exclude a variety of commonly ignored directories.
exclude = [
    "dead_code",
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

# Assume Python 3.10.
target-version = "py311"

[tool.ruff.lint]
# Enable Pyflakes `E` and `F` codes by default.
select = ["E", "F", "D", "UP", "B"]
ignore = [
    "E722",
    # only track structural problems with docstrings, not whitespace, nor missing
    "D200", "D212", "D415", "D411", "D205", "D102", "D103", "D100", "D107", "D101", "D104", "D105",
    "UP007", # Not sure if | is well supported in lowever versions of python
]
per-file-ignores = { }
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.scriv]
version = "literal: pyproject.toml: project.version"
format = "md"
main_branches = "master, main, develop, dev"

[tool.mypy]
warn_unused_configs = true
ignore_missing_imports = true
check_untyped_defs = true

[dependency-groups]
dev = [
    "mypy>=1.8",
    "pylint[spelling]>=3.0",
    "ruff>=0.1.9",
    "black>=23.11.0",
    "isort>=6.0.0",
    "bandit>=1.8.6",
    "pytest>=7.4.3",
    "pytest-cov>=4.1.0",
    "pytest-snapshot>=0.9.0",
    "anyio>=4.2.0",
    "pygount>=3.0.0",
    "pdoc>=15.0.4",
    "pre-commit>=4.0.0",
    "codespell>=2.4.1",
    "mdformat>=1.0.0",
    "interrogate>=1.7.0",
    "pydoctest==0.2.1",
    "metametameta>=0.1.5",
    "keepachangelog-manager-fork[jiggle]>=6.1.1",
    "mkdocs>=1.6.0",
    "python-dotenv>=1.0.0",
    "types-jsonschema",
    "types-PyYAML",
    "types-toml",
]

[tool.uv]
default-groups = ["dev"]

[tool.uv.pip]
universal = true

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101"]

[tool.changelogmanager.versioning]
scheme = "semver"

[tool.changelogmanager.validation]
enforce_preamble = true
format = "auto"

[tool.changelogmanager.defaults]
error_format = "github"
commit_schema = "keepachangelog"
schema_version = "current"

[[tool.changelogmanager.components]]
name = "default"
changelog = "CHANGELOG.md"
